Persistent worker nits (#2068)
* refactor(persistent): prefer lombok logger

* refactor(persistentworkers): prefer Files.readString

* refactor(persistentworkers): Guava deprecations

* refactor: avoid guava Throwables

Simple is better.